<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".rectangle">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="70dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/rectangle"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/length"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/Length"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/height"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="140dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:hint="@string/width"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="69dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:hint="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="131dp"
        android:layout_height="57dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="250dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans" />


</androidx.constraintlayout.widget.ConstraintLayout>