<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="54dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/square"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="67dp"
        android:text="@string/square"
        app:layout_constraintBottom_toTopOf="@+id/triangle"
        app:layout_constraintEnd_toStartOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/triangle"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="269dp"
        android:text="@string/triangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square" />

    <Button
        android:id="@+id/circle"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="272dp"
        android:text="@string/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/triangle"
        app:layout_constraintTop_toBottomOf="@+id/rectangle" />

    <Button
        android:id="@+id/rectangle"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="67dp"
        android:text="@string/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>